# Path_Planning_and_Control_Demo

./: A_star.cpp  A_star.py  Cubic_spline_function.py  Dynamic_window_approach.py  LQR_speed_steering.py  PRM.py  README.md  general_RRT.py
Control/: move_to_pose_PID.py  pure_pursuit.py
DWA/: CMakeLists.txt  dynamic_window_approach.cpp
Frenet_optimal_trajectory/: cubic_spline_planner.py  frenet_optimal_trjectory.py
LQR/: LQR_speed_steering.py
MPC_vehicle_control/: Model_predictive_speed_and_steering_control.ipynb  model_predictive_speed_and_steer_control.py
PRM_random_sample/: Astar.cpp  Astar.h  PRM_RSS.cpp  PRM_RSS.h  main.cpp
RRT_Star/: RRT_Star.py
RRT_demo/: RRT.cpp  RRT.h  main.cpp  map_pgm.cpp
